@@ -8,46 +8,23 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<!-- Tycho requires maven 3.0 -->
-	<prerequisites>
-		<maven>3.0</maven>
-	</prerequisites>
-
 	<parent>
 		<groupId>com.mmxlabs.parent</groupId>
-		<artifactId>mmxlabs-parent</artifactId>
-		<version>1.0.0</version>
+		<artifactId>tycho-parent</artifactId>
+		<version>1</version>
 		<relativePath />
 	</parent>
 
-	<issueManagement>
-		<system>CodebaseHQ</system>
-		<url>https://mmxlabs.codebasehq.com/repositories/tickets</url>
-	</issueManagement>
-	<inceptionYear>2010</inceptionYear>
 	<scm>
 		<connection>scm:hg:ssh://hg@codebasehq.com/mmxlabs/repositories/com-mmxlabs-rcp-common.hg</connection>
 		<developerConnection>scm:hg:ssh://hg@codebasehq.com/mmxlabs/repositories/com-mmxlabs-rcp-common.hg</developerConnection>
 		<url>https://mmxlabs.codebasehq.com/repositories/com-mmxlabs-rcp-common</url>
 	</scm>
-	<organization>
-		<name>Minimax Labs</name>
-		<url>http://www.minimaxlabs.com/</url>
-	</organization>
 
-
-	<properties>
-		<!-- Tycho version to use -->
-		<tycho.version>0.13.0</tycho.version>
-
-		<!-- Continue even when tests fail -->
-		<maven.test.failure.ignore>true</maven.test.failure.ignore>
-
-		<!-- Avoid platform dependent build warning -->
-		<!-- Code files should also be in UTF-8 -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-	</properties>
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>https://server1.mmxlabs.com/jenkins/job/com.mmxlabs.rcp.common/</url>
+	</ciManagement>
 
 	<modules>
 		<module>com.mmxlabs.rcp.common</module>
@@ -64,26 +41,14 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho.version}</version>
 				<!-- Enable tycho packaging types -->
 				<extensions>true</extensions>
 			</plugin>
 
-
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho.version}</version>
 				<configuration>
-					<!-- Tell the resolver to look at POM dependencies for additional bundles -->
-					<pomDependencies>consider</pomDependencies>
-
-					<resolver>p2</resolver>
-
-					<!-- Where to find the target definition -->
-					<!-- <target> <artifact> <groupId>com.mmxlabs.shiplingo</groupId> <artifactId>target-definition</artifactId> 
-						<version>0.0.1-SNAPSHOT</version> <classifier>shiplingo</classifier> </artifact> 
-						</target> -->
 
 					<environments>
 
@@ -121,51 +86,10 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<!-- Increase max heap size and enable a debug connection to port 8998 -->
-					<!-- <argLine>-Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,address=8998,server=y,suspend=n</argLine> -->
-					<!-- bug in recent tycho snapshots only allow a single argument here -->
-					<argLine>${ui.test.vmargs}</argLine>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
-	<profiles>
-		<profile>
-			<id>macosx</id>
-			<activation>
-				<os>
-					<name>mac os x</name>
-					<family>mac</family>
-				</os>
-			</activation>
-			<properties>
-				<ui.test.vmargs>-Xmx512m -XstartOnFirstThread</ui.test.vmargs>
-			</properties>
-		</profile>
-		<profile>
-			<id>other-os</id>
-			<activation>
-				<os>
-					<name>not-mac</name>
-					<family>!mac</family>
-				</os>
-			</activation>
-			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
-			</properties>
-		</profile>
-	</profiles>
-
 	<repositories>
-
-		<!-- We use repositories defined here rather than the platform target to 
-			allow local mirrors to be specified in settings.xml -->
 
 		<repository>
 			<id>indigo</id>
@@ -180,27 +104,17 @@
 		</repository>
 
 		<repository>
-			<id>mmxlabs-p2-snapshots</id>
-			<url>https://server1.mmxlabs.com/static/p2/mmxlabs-p2-snapshots/</url>
-			<layout>p2</layout>
-		</repository>
-
-		<repository>
 			<id>swtbot</id>
 			<url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site</url>
 			<layout>p2</layout>
 		</repository>
 
+		<repository>
+			<id>mmxlabs-p2-snapshots</id>
+			<url>https://s3-proxy.appspot.com/p2-repo/repositories/mmxlabs-p2-snapshots/</url>
+			<layout>p2</layout>
+		</repository>
+
 	</repositories>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>org.sonatype.tycho</id>
-			<name>Tycho snapshot repository</name>
-			<url>https://repository.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<updatePolicy>daily</updatePolicy>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
 </project>
